# libhgp

./: .gitignore  CMakeLists.txt  CMakeLists0.txt  Develop PPGL.md  Develop libhgp.md  README.md  geom.h  io.cpp  math.hpp  mesh.cpp  port.cpp  threeD.cpp  twoD.cpp
dev/: CMakeLists.txt  NewtonApple_hull3D.h  cgal.cpp  cgal.h  geom.h  hgp2d.cpp  hgp3d.cpp  hgpio.cpp  hgpmesh.cpp  hull3D.cpp  include_cgal.h  io.cpp  kdtree.h  libhgp.h  mesh.cpp  threeD.cpp  twoD.cpp
dev/post/: CMakeLists.txt  main.cpp
example/: example1.cpp
libhgp/: libhgp.h
local_libs/liblgp/: RI.hpp  liblgp.hpp  tinyxml2.hpp
pack-geom-lib/: .gitignore  CMakeLists.txt  README.md  geom.h
pack-geom-test-lib/: CMakeLists.txt  cgal.h  main.cpp
port/: cgal.h
post/: CMakeLists.txt  main.cpp
ppgl/: .gitignore  CMakeLists.txt  NewtonApple_hull3D.cpp  cgal.h  geom.h  geom.h~RF51791d.TMP  geom.h~RF87ddeb.TMP  geom.h~RFdfa377.TMP  include_cgal.h  io.cpp  kdtree.cpp  mesh.cpp  threeD.cpp  twoD.cpp
test/: CMakeLists.txt  main.cpp
